[package]
name = "ipaste"
version = "0.1.0"
authors = ["owocean <imdownudnerthere@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
ipfs-api = "0.11.0"
keybind = "0.1.0"
tokio = { version = "1", features = ["full"] }